--- a/webpackDemo/index.html
+++ b/webpackDemo/index.html
@@ -5,7 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-<script src="dist/bundle.js"></script>
-<h2>webpack</h2>
+
+<div id="app">
+</div>
+
 </body>
 </html>
